# bibmgr

./: README.md  pyproject.toml  requirements.txt  setup.py
bibmgr/: bibmgr.py
src/bibmgr/: bibmgr.py  library_model.py  parse.py  search.py  utilities.py
