[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bibmgr"
version = "0.0.1"
dependencies = [
    "click >= 8.1.7",
    "bibtexparser >= 2.0.0b7",
]
requires-python = ">=3.10"
authors = [
  {name="Steven Dahdah", email="sdahdah@users.noreply.github.com"},
]
description = "Reference management tools for BibTeX"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sdahdah/bibmgr"
Issues = "https://github.com/sdahdah/bibmgr/issues"

[project.scripts]
bibmgr = "bibmgr.bibmgr:cli"
